--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     buildToolsVersion '23'
     defaultConfig {
         applicationId "com.platypus.android.tablet"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 21
     }
     buildTypes {
@@ -48,6 +48,7 @@ dependencies {
     compile files('libs/additionnal.jar')
     compile files('libs/platypus-core.jar')
     // compile files('libs/mapbox-android-sdk-0.7.4.jar')
+    compile files('libs/microlog4android-1.0.0.jar')
 }
 
 repositories {
