--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
             android:name="TeleOpPanel"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
+
+             android:theme = "@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    			android:configChanges="orientation|keyboardHidden"> 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
