Revert "Modified .gitignore"
This reverts commit 806e7c03c98be19a024e08bcdbc204aab3be9c17.

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,7 @@ proguard/
 #Log Files
 *.log
 # MapboxGLAndroidSDK
-*.a
-*.so
-MapboxGLAndroidSDK/build
+MapboxGLAndroidSDK/
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
