--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
 
     //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-beta.2@aar'){
     //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-rc.1@aar')
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-SNAPSHOT@aar')
+    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar')
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar')
             {
                 transitive = true
             }
