--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,22 +62,19 @@ android {
 
 }
 dependencies {
-
     //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-beta.2@aar'){
     //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-rc.1@aar')
     //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar')
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar')
-            {
-                transitive = true
-            }
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
+        transitive = true
+    }
     compile files('libs/activation.jar')
     compile files('libs/mail.jar')
     compile files('libs/additionnal.jar')
-    compile files('libs/platypus-core.jar')
     // compile files('libs/mapbox-android-sdk-0.7.4.jar')
     compile files('libs/microlog4android-1.0.0.jar')
-    compile files('libs/platypus-core.jar')
     compile files('libs/jscience.jar')
+    compile files('libs/platypus-core.jar')
 }
 
 repositories {
