--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,6 @@ android {
 
 }
 dependencies {
-    //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-beta.2@aar'){
-    //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0-rc.1@aar')
-    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar')
     compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
         transitive = true
     }
@@ -75,6 +72,7 @@ dependencies {
     compile files('libs/microlog4android-1.0.0.jar')
     compile files('libs/jscience.jar')
     compile files('libs/platypus-core.jar')
+    compile 'com.android.support:support-v4:23.2.0'
 }
 
 repositories {
