--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,40 +16,20 @@
         android:theme="@style/AppTheme"
         android:logo="@drawable/logo"
 		android:configChanges="orientation"> <!-- lock orienation so async task doesnt die (shitty workaround) -->
-
-
-        <!--<activity-->
-            <!--android:name="com.example.platypuscontrolapp.ConnectScreen"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:screenOrientation="portrait"-->
-   			<!--android:configChanges="orientation|keyboardHidden" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-        
-         <activity
+        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
+        <activity
             android:name="TeleOpPanel"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
 
-             android:theme = "@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
-   			android:configChanges="orientation|keyboardHidden"> 
+            android:theme = "@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <!--<action android:name="android.intent.action.TeleOpPanel" />-->
             </intent-filter>
         </activity>
-
-
-         <activity
-            android:name="ServerTest"
-            android:label="@string/app_name" />
-
-
 
         <meta-data
             android:name="com.mapbox.AccessToken"
