--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,8 @@ android {
 
 }
 dependencies {
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
+    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0@aar') {
         transitive = true
     }
     compile files('libs/activation.jar')
