--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         applicationId "com.platypus.android.tablet"
         minSdkVersion 19
         targetSdkVersion 21
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -67,8 +68,8 @@ dependencies {
 
 
 
-    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.0@aar') {
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.1@aar') {
+    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
         transitive = true
     }
     compile files('libs/activation.jar')
