--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,10 @@ dependencies {
 
 
 
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.1@aar') {
+    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.1@aar') {
     //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
+    //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-beta.1@aar'){
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar'){
         transitive = true
     }
     compile files('libs/activation.jar')
