--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ dependencies {
     //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.0.1@aar') {
     //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
     //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-beta.1@aar'){
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar'){
-        transitive = true
+    //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-SNAPSHOT@aar'){
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0@aar'){
+        transitive=true
     }
     compile files('libs/activation.jar')
     compile files('libs/mail.jar')
