--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,8 @@ android {
 dependencies {
 
 
-
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-beta.2@aar'){
-        transitive=true
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-beta.2@aar') {
+        transitive = true
     }
     compile files('libs/activation.jar')
     compile files('libs/mail.jar')
@@ -76,10 +75,11 @@ dependencies {
     // compile files('libs/mapbox-android-sdk-0.7.4.jar')
     compile files('libs/microlog4android-1.0.0.jar')
     compile files('libs/jscience.jar')
-    compile 'com.android.support:support-v4:23.2.0'
     compile files('libs/platypus-core.jar')
-    compile 'com.google.firebase:firebase-crash:9.4.0'
+    //compile 'com.google.firebase:firebase-crash:9.4.0'
 
+    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.firebase:firebase-client-android:2.3.1'
 }
 
 repositories {
