saving ip works

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,11 @@ android {
     }
     productFlavors {
     }
-
+    packagingOptions {
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
     buildTypes {
         release {
             minifyEnabled false
