--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,14 @@ gradle.projectsEvaluated {
 }
 
 ext {
-    supportLibVersion = '23.1.1'
+    supportLibVersion = '24.2.1'
 }
 
 
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23'
+    compileSdkVersion 24
+    buildToolsVersion '24'
     defaultConfig {
         applicationId "com.platypus.android.tablet"
         minSdkVersion 21
@@ -70,9 +70,14 @@ android {
 dependencies {
 
 
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-beta.2@aar') {
+    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-beta.2@aar') {
+    //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar'){
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-SNAPSHOT@aar') {
         transitive = true
     }
+
+        //transitive = true
+    //}
     compile files('libs/activation.jar')
     compile files('libs/mail.jar')
     compile files('libs/additionnal.jar')
@@ -82,7 +87,7 @@ dependencies {
     compile files('libs/platypus-core.jar')
     //compile 'com.google.firebase:firebase-crash:9.4.0'
 
-    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:support-v4:24.2.1'
     compile 'com.firebase:firebase-client-android:2.3.1'
 }
 
