--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:logo="@drawable/logo"
-        android:theme="@style/AppTheme" > <!-- lock orienation so async task doesnt die (shitty workaround) -->
+        android:theme="@style/AppTheme" > <!-- lock orienatpion so async task doesnt die (shitty workaround) -->
         <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
         <activity
