--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,15 +19,10 @@ gradle.projectsEvaluated {
     preBuild.dependsOn('accessToken')
 }
 
-ext {
-    supportLibVersion = '23.1.1'
-}
-
-
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23'
+    compileSdkVersion 24
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.platypus.android.tablet"
         minSdkVersion 19
@@ -62,20 +57,23 @@ android {
 
 }
 dependencies {
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0-SNAPSHOT@aar') {
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.2@aar') {
         transitive = true
     }
     compile files('libs/activation.jar')
     compile files('libs/mail.jar')
     compile files('libs/additionnal.jar')
-    // compile files('libs/mapbox-android-sdk-0.7.4.jar')
     compile files('libs/microlog4android-1.0.0.jar')
     compile files('libs/jscience.jar')
-    compile files('libs/platypus-core.jar')
-    compile 'com.android.support:support-v4:23.2.0'
+
+    // Included until automatic resolution from repo is fixed
+    compile files('libs/platypus-core-1.0.1-20170316.122337-1-jar-with-dependencies.jar')
+
+    // Should request jar from mvn-repo but cannot resolve at the moment
+    //compile 'com.platypus.crw:platypus-core:1.0.1-SNAPSHOT'
 }
 
 repositories {
     mavenCentral()
-    maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://raw.githubusercontent.com/PlatypusLLC/core/mvn_repo" }
 }
