--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,6 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk
-        android:minSdkVersion="19"
-        android:targetSdkVersion="21" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -15,13 +11,12 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +24,8 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:logo="@drawable/logo"
-        android:theme="@style/AppTheme"> <!-- lock orienation so async task doesnt die (shitty workaround) -->
+        android:theme="@style/AppTheme"> <!-- lock orientation so async task does not die (workaround) -->
+
         <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
         <activity
@@ -52,11 +48,10 @@
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
+
         <meta-data
             android:name="com.mapbox.AccessToken"
             android:value="" />
-
-        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
     </application>
 
