--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        //classpath 'com.android.tools.build:gradle:2.1.0'
-        //classpath 'com.android.tools.build:gradle:2.0.0'
-        //classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.google.gms:google-services:3.0.0'
-        //classpath 'com.android.tools.build:gradle:1.3.0'
-
-
     }
 
 }
@@ -22,3 +17,6 @@ allprojects {
     }
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
