--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,13 @@ gradle.projectsEvaluated {
     preBuild.dependsOn('accessToken')
 }
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://raw.github.com/platypusllc/core/mvn-repo/"
+    }
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -54,14 +61,12 @@ dependencies {
     compile files('libs/mail.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/microlog4android-1.0.0.jar')
-    compile files('libs/jscience.jar')
-    compile files('libs/platypus-core.jar')
-    compile 'com.android.support:support-v4:25.0.1'
-    //compile 'com.google.firebase:firebase-crash:9.4.0'
-    //compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
+    compile ('org.jscience:jscience:4.3.+') {
+        exclude group: 'org.javolution', module: 'javolution'
+    }
+    compile group: 'com.platypus.crw', name: 'platypus-core', version: '+', changing: true
 }
 
-repositories {
-    mavenCentral()
-}
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
