--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 task accessToken {
     def tokenFile = new File("app/src/main/res/values/developer-config.xml")
@@ -54,19 +55,15 @@ android {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0@aar') {
         transitive = true
     }
-    compile files('libs/activation.jar')
-    compile files('libs/mail.jar')
-    compile files('libs/additionnal.jar')
-    compile files('libs/microlog4android-1.0.0.jar')
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.google.firebase:firebase-crash:9.4.0'
     compile ('org.jscience:jscience:4.3.+') {
         exclude group: 'org.javolution', module: 'javolution'
     }
     compile group: 'com.platypus.crw', name: 'platypus-core', version: '+', changing: true
 }
-
-apply plugin: 'com.google.gms.google-services'
