--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Disables pre-dexing (used to speed up automated builds which cannot use it).
+// See: https://guides.codepath.com/android/Setting-up-Travis-CI
+ext {
+    travisBuild = System.getenv("TRAVIS") == "true"
+    // allows for -Dpre-dex=false to be set
+    preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+}
