--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.github.triplet.play'
-apply plugin: 'com.google.gms.google-services'
 
 task accessToken {
     def tokenFile = new File("app/src/main/res/values/developer-config.xml")
@@ -90,3 +89,6 @@ dependencies {
     }
     compile group: 'com.platypus.crw', name: 'platypus-core', version: '+', changing: true
 }
+
+// Google Services are required to support Firebase.
+apply plugin: 'com.google.gms.google-services'
