--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.triplet.play'
 
 task accessToken {
     def tokenFile = new File("app/src/main/res/values/developer-config.xml")
@@ -19,82 +20,80 @@ gradle.projectsEvaluated {
     preBuild.dependsOn('accessToken')
 }
 
-ext {
-    supportLibVersion = '24.2.1'
+repositories {
+    mavenCentral()
+    maven {
+        url "https://raw.github.com/platypusllc/core/mvn-repo/"
+    }
 }
-
-
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25'
+    buildToolsVersion "25.0.2"
+    playAccountConfigs {
+        release {
+            jsonFile = file(System.getenv("ANDROID_PLAY_JSON_FILE") ?: ".")
+        }
+    }
+    signingConfigs {
+        release {
+            keyAlias System.getenv("ANDROID_RELEASE_KEY_ALIAS") ?: "EXAMPLE_ALIAS"
+            keyPassword System.getenv("ANDROID_RELEASE_KEY_PASSWORD") ?: "EXAMPLE_PASSWORD"
+            storeFile file(System.getenv("ANDROID_RELEASE_STORE_FILE") ?: ".")
+            storePassword System.getenv("ANDROID_RELEASE_STORE_PASSWORD") ?: "EXAMPLE_PASSWORD"
+            v2SigningEnabled true
+        }
+    }
     defaultConfig {
         applicationId "com.platypus.android.tablet"
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 25
+        versionCode 2
+        versionName "1.2.0"
         multiDexEnabled true
-    }
-    dexOptions {
-        preDexLibraries = false
+        playAccountConfig = playAccountConfigs.release
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
-    productFlavors {
+    dexOptions {
+        javaMaxHeapSize '4g'
+        // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
+        // See: https://guides.codepath.com/android/Setting-up-Travis-CI
+        preDexLibraries = preDexEnabled && !travisBuild
+    }
+    lintOptions {
+        abortOnError false
     }
     packagingOptions {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig getSigningConfig()
-            applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    def date = new Date();
-                    //def formattedDate = date.format('yyyyMMddHHmmss')
-                    output.outputFile = new File(output.outputFile.parent,
-                            output.outputFile.name.replace("app-release", "platypus-Tablet")
-                            //for Debug use output.outputFile = new File(output.outputFile.parent,
-                            //                             output.outputFile.name.replace("-debug", "-" + formattedDate)
-                    )
-                }
-            }
-        }
-    }
-
 }
-dependencies {
 
-    //compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0-beta.2@aar') {
-    //compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar'){
+play {
+    track = 'alpha'
+    untrackOld = true
+}
+
+dependencies {
+    testCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.2.0@aar') {
         transitive = true
     }
-
-    //transitive = true
-    //}
-    compile files('libs/activation.jar')
-    compile files('libs/mail.jar')
-    compile files('libs/additionnal.jar')
-    // compile files('libs/mapbox-android-sdk-0.7.4.jar')
-    compile files('libs/microlog4android-1.0.0.jar')
-    compile files('libs/jscience.jar')
-    compile files('libs/platypus-core.jar')
-    //compile 'com.google.firebase:firebase-crash:9.4.0'
-
-    compile 'com.android.support:support-v4:25.0.1'
-    //compile 'com.firebase:firebase-client-android:2.3.1'
+    compile ('org.jscience:jscience:4.3.+') {
+        exclude group: 'org.javolution', module: 'javolution'
+    }
+    compile group: 'com.platypus.crw', name: 'platypus-core', version: '+', changing: true
 }
 
-repositories {
-    mavenCentral()
-    maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
-}
-//apply plugin: 'com.google.gms.google-services'
+// Google Services are required to support Firebase.
+apply plugin: 'com.google.gms.google-services'
