--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        //classpath 'com.android.tools.build:gradle:2.1.0'
-        //classpath 'com.android.tools.build:gradle:2.0.0'
-        //classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.1'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+
+        // Google Services are required to support Firebase.
         classpath 'com.google.gms:google-services:3.0.0'
-        //classpath 'com.android.tools.build:gradle:1.3.0'
 
-
+        // Add gradle-play-publisher to deploy to Google Play store.
+        classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
     }
 
 }
@@ -22,3 +25,14 @@ allprojects {
     }
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+// Disables pre-dexing (used to speed up automated builds which cannot use it).
+// See: https://guides.codepath.com/android/Setting-up-Travis-CI
+ext {
+    travisBuild = System.getenv("TRAVIS") == "true"
+    // allows for -Dpre-dex=false to be set
+    preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+}
