--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,13 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -30,7 +28,6 @@
         android:label="@string/app_name"
         android:logo="@drawable/logo"
         android:theme="@style/AppTheme"> <!-- lock orienation so async task doesnt die (shitty workaround) -->
-        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
         <activity
             android:name=".TeleOpPanel"
@@ -40,9 +37,7 @@
             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-                <!-- <action android:name="android.intent.action.TeleOpPanel" /> -->
             </intent-filter>
         </activity>
 
@@ -52,11 +47,6 @@
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
-        <meta-data
-            android:name="com.mapbox.AccessToken"
-            android:value="" />
-
-        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
     </application>
 
