--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,8 +80,11 @@ dependencies {
     compile files('libs/mail.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/microlog4android-1.0.0.jar')
-    compile files('libs/jscience.jar')
     compile files('libs/platypus-core.jar')
+    compile 'org.apache.commons:commons-math3:3.6.1'
+    compile ('org.jscience:jscience:4.3.1') {
+        exclude group: 'org.javolution', module: 'javolution'
+    }
     //compile 'com.google.firebase:firebase-crash:9.4.0'
 
     //compile 'com.android.support:support-v4:25.0.1'
