--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ gradle.projectsEvaluated {
 }
 
 ext {
-    supportLibVersion = '24.2.1'
+    supportLibVersion = '25.4.0'
 }
 
 
@@ -72,8 +72,11 @@ android {
 }
 dependencies {
 
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.1@aar') {
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.1@aar') {
         transitive = true
+    }
+    compile ('com.github.worker8:tourguide:1.0.19-SNAPSHOT@aar') {
+        transitive=true
     }
 
     compile files('libs/activation.jar')
@@ -86,13 +89,15 @@ dependencies {
         exclude group: 'org.javolution', module: 'javolution'
     }
     //compile 'com.google.firebase:firebase-crash:9.4.0'
-
-    //compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
+    compile 'com.android.support:support-core-utils:25.4.0'
     //compile 'com.firebase:firebase-client-android:2.3.1'
 }
 
 repositories {
+    jcenter()
     mavenCentral()
     maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://maven.google.com" }
 }
 
