--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ android {
 }
 dependencies {
 
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.1@aar') {
+    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.1@aar') {
         transitive = true
     }
 
@@ -87,6 +87,9 @@ dependencies {
     }
     //compile 'com.google.firebase:firebase-crash:9.4.0'
 
+    compile "com.android.support:appcompat-v7:25.4.0"
+    compile 'com.android.support:recyclerview-v7:25.4.0'
+
     //compile 'com.android.support:support-v4:25.0.1'
     //compile 'com.firebase:firebase-client-android:2.3.1'
 }
@@ -94,5 +97,6 @@ dependencies {
 repositories {
     mavenCentral()
     maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://maven.google.com"}
 }
 
