--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         //classpath 'com.android.tools.build:gradle:2.1.0'
         //classpath 'com.android.tools.build:gradle:2.0.0'
         //classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath 'com.google.gms:google-services:3.0.0'
         //classpath 'com.android.tools.build:gradle:1.3.0'
 
