--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ task accessToken {
                 "    <string name=\"mapbox_access_token\">" + "$System.env.MAPBOX_ACCESS_TOKEN" + "</string>\n"+
                 "</resources>"
 
-        if (tokenFileContents == null) {
-            throw new InvalidUserDataException("You must set the MAPBOX_ACCESS_TOKEN environment variable.")
-        }
+//        if (tokenFileContents == null) {
+//            throw new InvalidUserDataException("You must set the MAPBOX_ACCESS_TOKEN environment variable.")
+    //}
         tokenFile.write(tokenFileContents)
     }
 }
@@ -30,7 +30,8 @@ android {
         defaultConfig {
         applicationId "com.platypus.android.tablet"
             multiDexEnabled true
-    }
+            minSdkVersion 23
+        }
     dexOptions {
         preDexLibraries = false
     }
